# kiso

./: .gitignore  CLAUDE.md  README.md  cli.py  deploy-coach.sh  gunicorn.conf.py  pyproject.toml
content/: linkedin-01-open-source.md
dashboard/: admin.html  index.html
docs/: API.md  ARCHITECTURE.md  COVERAGE.md  METHODOLOGY.md  MILO.md  ONBOARDING.md  PRIMER.md  ROADMAP.md  TEST_PLAN.md  WEARABLE_DATA_TIERS.md  apple-health-shortcut-setup.md  shared-data-layer-proposal.md
docs/decisions/: 2026-03-29-garmin-pull-refactor.md
engine/: db_read.py  models.py
engine/coaching/: briefing.py  habit_catalogue.py
engine/gateway/: api.py  config.py  db.py  focus_plan_api.py  issues.py  oauth_provider.py  scheduler.py  server.py  token_store.py  v1_api.py  v1_models.py  voice_bridge.py
engine/integrations/: garmin.py  gcal.py
engine/scoring/: engine.py  tables.py
engine/utils/: csv_io.py
mcp_server/: tools.py
scripts/: admin_status.py  deploy-api.sh  healthcheck_gateway.sh  migrate_kasane_export.py  migrate_paul_person_id.py  restart-api.sh  run_v1_api.py  seed_kasane_db.py  send_family_summary.py  sign_shortcuts.sh
tests/: test_apple_health_ingest.py  test_atomic_json_write.py  test_e2e_ingest_to_score.py  test_garmin.py  test_gcal.py  test_get_conversations.py  test_graceful_reload.py  test_habit_catalogue.py  test_lab_import.py  test_log_config.py  test_mcp_audit.py  test_mcp_surface.py  test_oura.py  test_person_dedup.py  test_presend_validation.py  test_scheduler.py  test_scoring.py  test_token_store.py  test_user_issues.py  test_v1_api.py  test_voice_bridge.py  test_wearable_connect_link.py  test_wearable_readers.py  test_whoop.py  test_zero_data_gate.py
workspace/: AGENTS.md  HEARTBEAT.md  MAC_MINI_ADMIN.md  SOUL.md  TOOLS.md  users.yaml
