[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-engine"
version = "0.6.0"
description = "Open-source health scoring engine — 20 clinically validated metrics, NHANES percentiles, wearable integration. Runs locally with Claude via MCP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["health", "mcp", "claude", "scoring", "wearables", "nhanes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
garmin = ["garminconnect>=0.2.0"]
gateway = ["fastapi>=0.115", "uvicorn>=0.32"]
dev = ["pytest>=7.0"]

[project.scripts]
health-engine = "mcp_server.server:main"

[project.urls]
Homepage = "https://mybaseline.health/health-engine/"
Repository = "https://github.com/a-deal/health-engine"

[tool.setuptools.packages.find]
include = ["engine*", "mcp_server*"]

[tool.setuptools.package-data]
engine = ["data/*.json", "data/*.md", "insights/rules.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
