[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiso"
version = "0.7.0"
description = "Health intelligence platform — backend for Kasane (iOS) and Milo (coaching agent). Shared data layer, 20-metric scoring engine, wearable integrations, MCP tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["health", "mcp", "claude", "scoring", "wearables", "kasane", "coaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
garmin = ["garminconnect>=0.2.0"]
calendar = ["google-api-python-client>=2.100", "google-auth-httplib2>=0.2", "google-auth-oauthlib>=1.2"]
gateway = ["fastapi>=0.115", "uvicorn>=0.32", "cryptography>=42.0"]
dev = ["pytest>=7.0"]

[project.scripts]
kiso = "mcp_server.server:main"
health-engine = "mcp_server.server:main"  # backward compat

[project.urls]
Homepage = "https://kasanelife.com"
Repository = "https://github.com/a-deal/kiso"

[tool.setuptools.packages.find]
include = ["engine*", "mcp_server*"]

[tool.setuptools.package-data]
engine = ["data/*.json", "data/*.md", "insights/rules.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
