[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-health"
version = "0.8.1"
description = "AI health coach for Claude. Tracks 20 metrics, scores your health coverage, coaches you through 14-day focused programs. Local-first, your data stays on your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["health", "mcp", "claude", "scoring", "wearables", "coaching", "baseline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "mcp[cli]>=1.6.0",
    "gunicorn>=25.3.0",
]

[project.optional-dependencies]
garmin = ["garminconnect>=0.2.0"]
calendar = ["google-api-python-client>=2.100", "google-auth-httplib2>=0.2", "google-auth-oauthlib>=1.2"]
gateway = ["fastapi>=0.115", "uvicorn>=0.32", "cryptography>=42.0", "anthropic>=0.40", "logfire[fastapi]>=2.0"]
voice = ["openai>=1.7.0", "websockets>=14.1"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
baseline-health = "mcp_server.server:main"
kiso = "mcp_server.server:main"
health-engine = "mcp_server.server:main"

[project.urls]
Homepage = "https://mybaseline.health"
Repository = "https://github.com/a-deal/kiso"

[tool.setuptools.packages.find]
include = ["engine*", "mcp_server*"]

[tool.setuptools.package-data]
engine = ["data/*.json", "data/*.md", "insights/rules.yaml", "coaching/*.yaml", "coaching/*.md"]
mcp_server = ["data/coaching/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
